--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   text-align: center;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
   #flag {
     height: 100vh;
     border-left: 90px solid green;
@@ -19,11 +19,29 @@ body {
   }
 }
 
-@media screen and (min-width: 481px) {
+@media screen and (min-width: 577px) and (max-width: 768px) {
   #flag {
     height: 100vh;
     border-left: 200px solid green;
     border-right: 200px solid green;
-    font-size: 100px;
+    font-size: 90px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+  #flag {
+    height: 100vh;
+    border-left: 250px solid green;
+    border-right: 250px solid green;
+    font-size: 110px;
+}
+}
+
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+  #flag {
+    height: 100vh;
+    border-left: 250px;
+    border-right: 250px;
+    font-size: 120px;
   }
 }
